<resources>
    <string name="app_name">Segiii</string>
    <string name="txt_Nombre">Ingresa tu nombre</string>
    <string name="txt_Apellidos">Ingresa tus apellidos</string>
    <string name="txt_Usuario">Ingresa tu usuario</string>
    <string name="txt_Contraseña">Contraseña</string>
    <string name="txt_confirm_contraseña">Confirma tu contraseña</string>
    <string name="txt_Nombre_Coordenada">Lugar</string>
    <string name="txt_correo">Correo electrónico</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="txt_correo_electronico">Correo electrónico</string>
    <string name="txt_registrar">¿No estas registrado? Registrate</string>
    <string name="txt_olvidar">¿Olvidaste tu contraseña?</string>
    <string name="alto_contraste">Alto contraste</string>
    <string name="daltonismo_rojo_verde">Daltonismo (Rojo-Verde)</string>
    <string name="daltonismo_azul_amarillo">Daltonismo (Azul-Amarillo)</string>
    <string name="aumentar_tama_o_de_texto">Aumentar tamaño de texto</string>
    <string name="restablecer_filtros">Restablecer filtros</string>
</resources>